tests/NormalTests/paczka1/fuzzy1/88159414.err
Error in line 8: A496 S419 90,8
Error in line 10: p5lgUGN A496 22,6
Error in line 11: p5lgUGN S419 14,1
Error in line 19: TPU S211 53,9
Error in line 26: z7mQv S419 49,2
Error in line 22: p5lgUGN S211 106,5
Error in line 24: c519ogpdLj A496 56,0
Error in line 25: JbYf S201 11,9
